overflow fixed

--- a/styles/main-style.css
+++ b/styles/main-style.css
@@ -62,7 +62,7 @@ header h1 {
   justify-content: center;
   align-items: center;
   grid-gap: 30px;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
 }
 .products-section article img {
   display: block;
